--- a/angular.json
+++ b/angular.json
@@ -3,7 +3,7 @@
   "version": 1,
   "newProjectRoot": "projects",
   "projects": {
-    "ng-test-second": {
+    "ng-timed-silver": {
       "projectType": "application",
       "schematics": {
         "@schematics/angular:component": {
@@ -17,7 +17,7 @@
         "build": {
           "builder": "@angular-devkit/build-angular:browser",
           "options": {
-            "outputPath": "dist/ng-test-second",
+            "outputPath": "dist/ng-timed-silver",
             "index": "src/index.html",
             "main": "src/main.ts",
             "polyfills": "src/polyfills.ts",
@@ -28,7 +28,7 @@
               "src/assets"
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.css"
             ],
             "scripts": []
           },
@@ -67,18 +67,18 @@
         "serve": {
           "builder": "@angular-devkit/build-angular:dev-server",
           "options": {
-            "browserTarget": "ng-test-second:build"
+            "browserTarget": "ng-timed-silver:build"
           },
           "configurations": {
             "production": {
-              "browserTarget": "ng-test-second:build:production"
+              "browserTarget": "ng-timed-silver:build:production"
             }
           }
         },
         "extract-i18n": {
           "builder": "@angular-devkit/build-angular:extract-i18n",
           "options": {
-            "browserTarget": "ng-test-second:build"
+            "browserTarget": "ng-timed-silver:build"
           }
         },
         "test": {
@@ -115,15 +115,15 @@
           "builder": "@angular-devkit/build-angular:protractor",
           "options": {
             "protractorConfig": "e2e/protractor.conf.js",
-            "devServerTarget": "ng-test-second:serve"
+            "devServerTarget": "ng-timed-silver:serve"
           },
           "configurations": {
             "production": {
-              "devServerTarget": "ng-test-second:serve:production"
+              "devServerTarget": "ng-timed-silver:serve:production"
             }
           }
         }
       }
     }},
-  "defaultProject": "ng-test-second"
+  "defaultProject": "ng-timed-silver"
 }
